--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
         "@angular/platform-browser": "^8.0.0",
         "@angular/platform-browser-dynamic": "^8.0.0",
         "@angular/router": "^8.0.0",
+        "angular2-spotify": "^1.3.5",
         "core-js": "^3.1.3",
         "rxjs": "^6.3.3",
+        "spotify-auth": "^2.0.1",
         "zone.js": "^0.9.1"
     },
     "devDependencies": {
